# LINARS

./: CMakeLists.txt  CMakePresets.json  README.md
include/: chebishev.hpp  gauss.hpp  gmres.hpp  holetski.hpp  imatrix.hpp  implictsolver.hpp  implictstep.hpp  lvlmatrix.hpp  m3diag.hpp  matrix.hpp  matrixes.hpp  mcsr.hpp  mdoc.hpp  mdok.hpp  mgenerator.hpp  mvector.hpp  qrdec.hpp  qrsolver.hpp  t2m.hpp  tomas.hpp  trmatrix.hpp  types.hpp
measures/: CGD.csv  SteeperGD.csv  gauszeidel.csv  gmres.csv  gplot.gp  gplot2.gp  gplot3.gp  gplot4.gp  gplot5.gp  gplot7.gp  jacobi.csv  simple.csv  simplecheb.csv  sor.csv  ssorchb.csv  tau4.csv
measures/CGD_and_precondition/: CGD.csv  PCCGD.csv  gplot2.gp  gplot3.gp  gplot4.gp  gplot5.gp
measures/csrstandarttest/: gplot3.gp  jacobi.csv  simple.csv
measures/gmres/: gmresm.csv  gplot.gp
measures/map_of_sol/: CGDV.csv  SGDV.csv  SimpleV.csv  plot.py
measures/mdoktests/: gauszeidel.csv  gplot.gp  jacobi.csv  res.csv  res2.csv  simple.csv
measures/test/: gplot6.gp  gplot8.gp  gplot9.gp  tau.csv  tau2.csv  tau3.csv
measures/test2/: gplot2.gp  gplot4.gp  gplot5.gp  simple.csv
src/: CMakeLists.txt  m3diag.cpp  matrix.cpp  matrix.hpp  mcsr.cpp  mdoc.cpp  mdok.cpp  t2m.hpp  tomas.cpp  tomas.hpp  vector.hpp
test/: CMakeLists.txt  basic_io_test.cpp  csr_test_m.cpp  implictsolvers_test.cpp  it_test.cpp  it_test_m.cpp  mcsr_test.cpp  mdok_test.cpp  mul_test.cpp  mxv_test.cpp  qr_solve_test.cpp  qrdec_test.cpp  test_1.cpp  test_2.cpp  time_implict_measeure.cpp  time_implict_measeure2.cpp  time_implict_measeure3.cpp  time_implict_measeure4.cpp  time_test.cpp  timer.hpp  tomas_test.cpp  vector_test.cpp
test/test/: io1  io2  io3  io4  iof1  mul1  mul2  mul3
